# Search_string

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  main.cpp
tests/: CMakeLists.txt  test_searchserver.cpp
